# cloud_storage_system

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  banking_client.cpp  banking_server.cpp  banking_system_impl.cpp  banking_system_impl.hpp  banking_system_persistent.cpp  banking_system_thread_safe.cpp  docker-compose.yml  jenkins-setup.sh  main_server.cpp
ai/: fraud_detection_agent.cpp
concurrent/: lockfree_queue.cpp  transaction_processor.cpp
database/: banking_persistence.cpp  postgres_connection.cpp  schema.sql  setup_postgres.sh
include/: banking_server.hpp  banking_system.hpp  banking_system_persistent.hpp  banking_system_thread_safe.hpp
include/ai/: fraud_detection_agent.hpp
include/concurrent/: lockfree_queue.hpp  transaction_processor.hpp
include/database/: banking_persistence.hpp  postgres_connection.hpp
include/network/: protocol.hpp  tcp_client.hpp  tcp_server.hpp
include/nlohmann/: json.hpp
include/observability/: logger.hpp  metrics.hpp
monitoring/: prometheus.yml
network/: protocol.cpp  tcp_client.cpp  tcp_server.cpp
observability/: logger.cpp  metrics.cpp
tests/: test_banking_system.cpp
